# deir

./: .gitignore  pyproject.toml
logs/MiniGrid-DoorKey-8x8-v0/2025-05-07_00-29-05/0/: 0.monitor.csv  1.monitor.csv  10.monitor.csv  11.monitor.csv  12.monitor.csv  13.monitor.csv  14.monitor.csv  15.monitor.csv  2.monitor.csv  3.monitor.csv  4.monitor.csv  5.monitor.csv  6.monitor.csv  7.monitor.csv  8.monitor.csv  9.monitor.csv  rollout.csv  train.csv
src/: train.py  train_mini_minigrid.py  train_minigrid.py
src/algo/: ppo_model.py  ppo_rollout.py  ppo_trainer.py
src/algo/buffers/: ppo_buffer.py
src/algo/common_models/: cnns.py  gru_cell.py  mlps.py
src/algo/intrinsic_rewards/: base_model.py  deir.py  icm.py  ngu.py  noveld.py  plain_forward.py  plain_inverse.py  rnd.py
src/deir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/env/: minigrid_envs.py  subproc_vec_env.py
src/utils/: common_func.py  configs.py  env_utils.py  video_recorder.py
