[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deir"
version = "0.1.0"
description = "Discriminative-model-based Episodic Intrinsic Reward (DEIR)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "click==8.1.3",
    "torch==2.0.1",
    "numpy==1.22.3",
    "stable-baselines3==1.1.0",
    "gym==0.23.1",
    "gym-minigrid==1.0.3",
    "wandb==0.13.0",
    "psutil==5.9.1",
    "tensorboard==2.8.0",
    "procgen==0.10.7",
    "envpool; sys_platform != \"darwin\"",
    "opencv-python==4.6.0.66",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/swan-utokyo/deir"

[project.scripts]
deir-train = "src.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
